Update: appsettings.json default connection string

--- a/ParkingFlow/appsettings.json
+++ b/ParkingFlow/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ParkingFlow-3d39ff61-6136-488d-8a29-5fd23357b607;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ParkingFlow;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
