--- a/ParkingFlow/appsettings.json
+++ b/ParkingFlow/appsettings.json
@@ -8,5 +8,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Stripe": {
+    "SecretKey": "SecretKey",
+    "PublishableKey": "PublishableKey"
+  }
 }
